# jaltext

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main_client.cpp  main_server.cpp
src/client/: client.cpp  client.hpp
src/jalsock/: jalsock.cpp  jalsock.hpp
src/server/: server.cpp  server.hpp
src/types/: addr_info.cpp  addr_info.hpp  addr_info_enums.hpp  aliases.hpp  fd_set.cpp  fd_set.hpp  sockaddr.cpp  sockaddr.hpp
